--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,16 @@
-#########
-#
-# workshop-template-b, evanwill
-# a Jekyll template for a simple workshop website
-# https://github.com/evanwill/workshop-template-b
-#
-#########
-
 #######
 # SITE SETTINGS
 #
 # title appears in the header
-title: workshop-template-b
+title: REDCap at Griffith
 # title-icon appears in the header to give some pizazz (leave blank for none)
 # choose from Font Awesome 5 free, https://fontawesome.com/icons?d=gallery&m=free
 # some options: fas fa-wrench; fas fa-cogs; fas fa-code; fas fa-chalkboard-teacher; fas fa-book-open
-title-icon: fas fa-code
+title-icon: fas pied-piper-hat
 # description, keywords, and image for meta tags
-description: "Create a workshop website quick and easy!"
-keywords: "workshops, websites, gh-pages, jekyll"
-featured-image: "/images/uidaho-workshop.jpg"
+description: "A companion resource to Griffith Library's Research Data Capture workshop"
+keywords: "workshops, research, data, surveys, longitudinal, redcap"
+featured-image: "/images/redcap-logo-full.png"
 # add search box to footer? true/false
 search: true
 
@@ -27,7 +19,7 @@ author: Yuri Banens
 # your github username for link [optional]
 github_username: GriffithUniLibrary
 # year or date published
-pub_year: 2020
+pub_year: 2021
 # location of code, the full url to your github repository
 source-code: https://github.com/GriffithUniLibrary/redcap
 
