GU Library credit

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ featured-image: "/images/redcap-logo-full.png"
 search: true
 
 # author settings for cc-by, appears in the footer and credits
-author: Yuri Banens
+author: Griffith University Library
 # your github username for link [optional]
 github_username: GriffithUniLibrary
 # year or date published
